play with babel

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "rebuild": "nodemon ./bin/www"
+    "start": "npm run babel-node && nodemon ./bin/www",
+    "babel-node": "./node_modules/.bin/babel src --out-dir public --presets=@babel/env"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -15,6 +16,11 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/node": "^7.13.12",
+    "@babel/plugin-transform-arrow-functions": "^7.13.0",
+    "@babel/preset-env": "^7.13.12",
     "nodemon": "^2.0.7"
   }
 }
