--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "babel-node": "./node_modules/.bin/babel src --out-dir public --presets=@babel/env"
+    "babel-node": "./node_modules/.bin/babel src --out-dir public --presets=@babel/env",
+    "start:dev": "nodemon --watch src --exec npm run babel-node && npm run start"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "babylonjs": "^4.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
