--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "server": "node ./bin/www",
+    "start": "npm run babel-node && npm run server",
     "babel-node": "./node_modules/.bin/babel src --out-dir public --presets=@babel/env",
     "start:dev": "nodemon --watch src --exec npm run babel-node && npm run start"
   },
